# UMRABOR-AI

./: .env.example  .env.production.example  .gitignore  DEPLOYMENT.md  Makefile  README.md  TEST_DEPLOY.md  docker-compose.production.yml  docker-compose.yml  package.json  render.yaml  tsconfig.base.json  umrabor_client_v7.html
android/: .gitignore  settings.gradle
docs/: UMRABOR_Full_Documentation.html  UMRABOR_Full_Documentation.md
prototypes/: README.md  README_PROTOTYPES.txt  index.html  umrabor_admin_v5.html  umrabor_faq.html  umrabor_overview.html  umrabor_platform_v1.html  umrabor_web_v1.html
services/api/: Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 20260521_1000_initial.py
services/api/app/: __init__.py  main.py
services/api/app/api/: deps.py
services/api/app/api/v1/: __init__.py
services/api/app/api/v1/endpoints/: audit.py  auth.py  bookings.py  dashboard.py  directories.py  packages.py  partners.py  payments.py  pilgrims.py  vouchers.py
services/api/app/core/: config.py  security.py
services/api/app/db/: base.py  session.py
services/api/app/models/: __init__.py  audit.py  auth.py  booking.py  customer.py  directory.py  enums.py  package.py  partner.py  payment.py  user_umrabor.py
services/api/app/schemas/: auth.py  booking.py  common.py  directory.py  package.py  partner.py
services/api/app/scripts/: seed.py
services/api/app/services/: audit.py  codes.py  otp.py  sms.py  voucher.py
services/api/tests/: test_auth.py  test_health.py
(+81 files in other folders)
